Opened 10 years ago
Closed 10 years ago
#11313 closed bug (fixed)
[keystore_server] it shouldn't be possible to hide Application Keyring Access
Reported by: | diver | Owned by: | mmlr |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Servers/keystore_server | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Double clicking "Application Keyring Access" hides the window leaving no way to get it back. Ultimately, you can't run any app which request keyring access as this window is now hidden.
Note:
See TracTickets
for help on using tickets.
Fixed for both the application access as well as the key request dialog in hrev47961.