keystore_server: Add missing B_NOT_MINIMIZABLE on requests.

The application access and key request windows were minimizable without
a way to get them back. Fixes #11313.