src/servers/keystore/AppAccessRequestWindow.cpp
@@ -134,7 +134,7 @@ AppAccessRequestWindow::AppAccessRequestWindow(const char* keyringName,
 	:
 	BWindow(BRect(50, 50, 269, 302), "Application Keyring Access",
 		B_TITLED_WINDOW, B_NOT_RESIZABLE | B_ASYNCHRONOUS_CONTROLS
-			| B_NOT_ZOOMABLE | B_AUTO_UPDATE_SIZE_LIMITS),
+			| B_NOT_ZOOMABLE | B_NOT_MINIMIZABLE | B_AUTO_UPDATE_SIZE_LIMITS),
 	fRequestView(NULL),
 	fDoneSem(-1),
 	fResult(kMessageDisallow)
