src/servers/keystore/KeyRequestWindow.cpp
@@ -149,7 +149,7 @@ KeyRequestWindow::KeyRequestWindow()
 	:
 	BWindow(BRect(50, 50, 269, 302), "Unlock Keyring",
 		B_TITLED_WINDOW, B_NOT_RESIZABLE | B_ASYNCHRONOUS_CONTROLS
-			| B_NOT_ZOOMABLE | B_AUTO_UPDATE_SIZE_LIMITS),
+			| B_NOT_ZOOMABLE | B_NOT_MINIMIZABLE | B_AUTO_UPDATE_SIZE_LIMITS),
 	fRequestView(NULL),
 	fDoneSem(-1),
 	fResult(B_ERROR)
